src/cpp/include/bindings.h

template<typename T = void>
struct Option;
using SoundState = uint8_t;
using BSPNodeRel = uint8_t;
using BlendMode = int32_t;
struct Matrix {
  float m[16];
};
using DeviceType = int32_t;
using Button = int32_t;
using CubeFace = int32_t;
using CullFace = int32_t;
using DataFormat = int32_t;
using Error = uint32_t;
using TexFormat = int32_t;
struct Tex2D {
  uint32_t _refCount;
  uint32_t handle;
  IVec2 size;
  TexFormat format;
};
using TimeStamp = uint64_t;
using Modifier = int32_t;
using State = int32_t;
using HatDir = uint32_t;
using Key = uint8_t;
using lua_CFunction = int32_t(*)(lua_State*);
using LuaFn = int32_t(*)(Lua*);
struct Tex3D {
  uint32_t _refCount;
  uint32_t handle;
  IVec3 size;
  TexFormat format;
};
using Metric = int32_t;
using MouseButton = int32_t;
using PixelFormat = int32_t;
struct TexCube {
  uint32_t _refCount;
  uint32_t handle;
  int32_t size;
  TexFormat format;
};
using ResourceType = int32_t;
using ShaderVarType = int32_t;
struct Tex1D {
  uint32_t _refCount;
  uint32_t handle;
  int32_t size;
  TexFormat format;
};
union C2RustUnnamed {
  float asFloat;
  Vec2 asFloat2;
  Vec3 asFloat3;
  Vec4 asFloat4;
  int32_t asInt;
  Matrix *asMatrix;
  Tex1D *asTex1D;
  Tex2D *asTex2D;
  Tex3D *asTex3D;
  TexCube *asTexCube;
};
using Signal = int32_t;
using TexFilter = int32_t;
using TexWrapMode = int32_t;
using ThreadFn = int32_t(*)(void*);
using ThreadPoolFn = int32_t(*)(int32_t, int32_t, void*);
using WindowMode = uint32_t;
using WindowPos = int32_t;
using PolygonFlag = uint8_t;
extern const uint32_t subsystems;
bool Directory_Create(const char *path);
void Engine_Init(int32_t glVersionMajor, int32_t glVersionMinor);
void Engine_Free();
void Engine_Abort();
int32_t Engine_GetBits();
double Engine_GetTime();
const char *Engine_GetVersion();
bool Engine_IsInitialized();
void Engine_Terminate();
void Engine_Update();
void Gamepad_Update();
void Input_Init();
void Input_Free();
void Input_Update();
void Joystick_Update();
void Keyboard_Init();
void Keyboard_Free();
void Keyboard_UpdatePre();
void Keyboard_UpdatePost();
extern TimeStamp TimeStamp_Get();
void Metric_Reset();
void Mouse_Init();
void Mouse_Free();
void Mouse_Update();
void Profiler_Begin(const char *name);
void Profiler_End();
void Resource_Init();
void ShaderVar_Init();
void ShaderVar_Free();
void Signal_Init();
void Signal_Free();
TimeStamp TimeStamp_Get();
double TimeStamp_GetElapsed(TimeStamp then);